[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/jam_game_art.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Falling",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 14, 21 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 19, 21 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 19, 5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 2 )
speed = Vector2( 400, 1000 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 3, 3 )
frames = SubResource( 7 )
animation = "Walking"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -21 )
shape = SubResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -87 )
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="enemmyDetector" type="Area2D" parent="."]
modulate = Color( 0.529412, 0, 1, 1 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemmyDetector"]
position = Vector2( -1, -21 )
shape = SubResource( 9 )

[node name="spikeDetector" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="spikeDetector"]
position = Vector2( -1, 0 )
shape = SubResource( 10 )

[connection signal="area_entered" from="enemmyDetector" to="." method="_on_enemmyDetector_area_entered"]
[connection signal="body_entered" from="enemmyDetector" to="." method="_on_enemmyDetector_body_entered"]
[connection signal="body_entered" from="spikeDetector" to="." method="_on_spikeDetector_body_entered"]
